# shanghai-metro-pathfinder

./: .gitignore  CLAUDE.md  metro_api.py
cpp/: CMakeLists.txt  build_server.sh  run_server.bat
cpp/backend/: server.cpp
cpp/backend/static/: app.js  index.html  layout.json  octilinear.json  style.css
cpp/backend/static/legacy/: app.js  labeler.js  layout.json  octilinear_from_image.json  station_coords.json  style.css
cpp/include/metro/: build_dataset.hpp  csv.hpp  graph.hpp  menu.hpp  network_analysis.hpp  pathfinder.hpp  station.hpp  utils.hpp
cpp/src/: build_dataset.cpp  csv.cpp  graph.cpp  main.cpp  menu.cpp  network_analysis.cpp  pathfinder.cpp  station.cpp  utils.cpp
cpp/tests/: coursework_check.cpp  test_cases.cpp
cpp_CLI/: .gitignore  CMakeLists.txt  README.md  build.sh
cpp_CLI/include/: csv.hpp  graph.hpp  pathfinder.hpp  station.hpp
cpp_CLI/src/: csv.cpp  graph.cpp  main.cpp  pathfinder.cpp  station.cpp
docs/: template_analysis.txt  template_annotations.txt  小组报告-正式-上海地铁路径规划系统.docx  小组报告-示例-上海地铁路径规划系统.docx  小组报告.docx  小组报告模板-格式说明.md
docs/ppt-v2.0.0/: README.md  generate_slides.py  答辩PPT-v2.0.0.pptx
docs/课设要求/: Gemini_Report.md  个人报告模板.doc  小组报告模板.docx
metro_data/: fltime-04.csv  fltime-07.csv  fltime-10.csv  fltime-11.csv  fltime-12.csv  fltime-14.csv  fltime-16.csv  fltime-41.csv  line-01.csv  line-03.csv  line-06.csv  line-09.csv  line-11.csv  line-12.csv  line-15.csv  line-17.csv  line-51.csv
python/: fetch_all.py  main.py  request_metro.py
python/data/: Edge.csv  Station.csv  Station_init.csv  update_station_status.csv
python/metro_data/: fltime-01.csv  fltime-02.csv  fltime-03.csv  fltime-05.csv  fltime-06.csv  fltime-08.csv  fltime-09.csv  fltime-13.csv  fltime-15.csv  fltime-17.csv  fltime-18.csv  fltime-51.csv  line-02.csv  line-04.csv  line-05.csv  line-07.csv  line-08.csv  line-10.csv  line-13.csv  line-14.csv  line-16.csv  line-18.csv  line-41.csv
python/src/: build_dataset.py  menu.py  station.py  (+2 more)
scripts/: .overpass_cache.json  build_group_report.py  detect_stations.py  detect_stations_v2.py  explore_metro_image.py  fetch_station_coords.py  generate_layout.py  match_by_sequence.py  match_by_sequence_v2.py  station_coords_override.json
src/: build_dataset.py  graph.py  pathfinder.py
课设要求/: ChatGPT_deep-research-report.md
(+5 files in other folders)
